--- a/Moduo1/Client/MainWindow.xaml
+++ b/Moduo1/Client/MainWindow.xaml
@@ -298,7 +298,7 @@
                                 <TextBox x:Name="ProjectDescriptionTextBox" HorizontalAlignment="Left" Height="92" Margin="98,75,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="156"/>
                                 <TextBox x:Name="ProjectStartDateTextBox" HorizontalAlignment="Left" Height="23" Margin="98,195,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="156"/>
                                 <TextBox x:Name="ProjectDeadlineTextBox" HorizontalAlignment="Left" Height="23" Margin="98,223,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="156"/>
-                                <Button x:Name="CreateProjectButton" Content="Create project" HorizontalAlignment="Left" Margin="169,268,0,0" VerticalAlignment="Top" Width="85" Click="CreateProjectButton_Click" Background="#FFF4F5F7" BorderBrush="#FFABADB3" Foreground="#FF1F3277" FontWeight="Bold" BorderThickness="1" Height="27"/>
+                                <Button x:Name="CreateProjectButton" Content="Create project" HorizontalAlignment="Left" Margin="169,333,0,0" VerticalAlignment="Top" Width="85" Click="CreateProjectButton_Click" Background="#FFF4F5F7" BorderBrush="#FFABADB3" Foreground="#FF1F3277" FontWeight="Bold" BorderThickness="1" Height="27"/>
                                 <Label x:Name="DateTimeFormatLabel" Content="mm/dd/yyyy" HorizontalAlignment="Left" Margin="259,195,0,0" VerticalAlignment="Top" Width="77" Height="35"/>
                                 <Grid HorizontalAlignment="Left" Height="410" Margin="392,10,0,0" VerticalAlignment="Top" Width="468" Background="White">
                                     <ComboBox x:Name="ProjectsComboBox" ItemsSource="{Binding}" DisplayMemberPath="Name" HorizontalAlignment="Left" Margin="23,30,0,0" VerticalAlignment="Top" Width="184" SelectionChanged="ProjectsComboBox_SelectionChanged"/>
@@ -308,6 +308,8 @@
                                     </ListBox>
 
                                 </Grid>
+                                <Label Content="Scrum Master:" HorizontalAlignment="Left" Margin="10,265,0,0" VerticalAlignment="Top" Width="83"/>
+                                <ComboBox x:Name="SMcomboBox" HorizontalAlignment="Left" Margin="98,268,0,0" VerticalAlignment="Top" Width="156"/>
                             </Grid>
                         </TabItem>
                         <TabItem Margin="0,10,-228,-10" HorizontalAlignment="Right" Width="58" Height="39" Focusable="True">
@@ -338,7 +340,7 @@
                                 <Grid Background="White" Margin="32,297,393,4">
                                     <Label x:Name="oldPasswordLabel" Content="Type in current password: " HorizontalAlignment="Left" Height="29" Margin="10,34,0,0" VerticalAlignment="Top" Width="157"/>
                                     <Label x:Name="newPasswordLabel" Content="Type in new password: " HorizontalAlignment="Left" Height="36" Margin="10,60,0,0" VerticalAlignment="Top" Width="148"/>
-                                    <PasswordBox x:Name="passBoxOldPass" IsEnabled="False" HorizontalAlignment="Left" Height="19" Margin="167,39,0,0" VerticalAlignment="Top" Width="145" PasswordChanged="PassBoxOldPass_PasswordChanged" LostFocus="passBoxOldPass_LostFocus"/>
+                                    <PasswordBox x:Name="passBoxOldPass" IsEnabled="False" HorizontalAlignment="Left" Height="19" Margin="167,39,0,0" VerticalAlignment="Top" Width="145" PasswordChanged="PassBoxOldPass_PasswordChanged" LostFocus="PassBoxOldPass_LostFocus"/>
                                     <PasswordBox x:Name="passBoxNewPass" IsEnabled="False" HorizontalAlignment="Left" Height="20" Margin="167,63,0,0" VerticalAlignment="Top" Width="145"/>
                                     <Label x:Name="warningPasswordLabel" Content="" HorizontalAlignment="Left" Margin="10,101,0,0" VerticalAlignment="Top" Width="302"/>
                                 </Grid>
